# fin-markets-lab

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  openai_utils.py  utils.py
app/clients/: fred_client.py  polygon_client.py  sec_edgar_client.py
app/exchange/: engine.py
app/routers/: alpaca_router.py  dropcopy_router.py  event_amm_router.py  exchange_engine_router.py  fred_router.py  polygon_router.py  sec_edgar_router.py  ws_sim_router.py
fin_markets_lab.egg-info/: SOURCES.txt  requires.txt
tests/: test_health.py  test_plugin_loader.py
