[project]
name = "fin-markets-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "openai==1.51.0",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "numpy==2.1.1",
  "scipy==1.13.1",
  "pandas==2.2.2",
  "alpaca-trade-api==3.2.0",
]
[tool.ruff]
line-length = 100
